--- a/demo/index.html
+++ b/demo/index.html
@@ -3,41 +3,65 @@
 <head>
   <meta charset="utf-8">
   <title>Naapurisopu 2020 UI Demo</title>
-  <link rel="stylesheet" href="custom.css">
+  <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->    
+  <link rel="stylesheet" href="css/blueprint/screen.css" />
+  <!--[if lt IE 8]><link rel="stylesheet" href="blueprint/ie" /><![endif]-->
+  <link rel="stylesheet" href="css/custom.css" />
 </head>
 <body>
-  <header>
-    <h1>Smoke Parrot</h1>
-  </header>
-  <section id="main">
-    <div id="poster">
-      
-    </div>
-    <div id="filter">
-      
-    </div>
-    <div id="feed">
-      <div class="message">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <div class="container">
+    <header class="span-24 last">
+      <h1>Smoke Parrot</h1>
+    </header>
+    <section id="main" class="span-17 colborder">
+      <div id="poster">
+        <form>
+          <textarea id="post-text" placeholder="Insert your post here"></textarea>
+          <button id="post-button">Post</button>
+        </form>
       </div>
-      <div class="message">
-        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div id="feed">
+        <h2>Recently Smoked</h2>
+        <div id="filter">
+          <input id="filter-text" type="search" class="text" placeholder="Insert your filter query here"></input>
+          <button id="filter-button">Filter</button>
+        </div>
+        <hr class="space" />
+        <div class="message">
+          <div class="message-info">
+            Resmoked 8 times | Proximity: Medium
+          </div>
+          <p class="sender-name quiet">FirstNode</p>
+          <p class="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="message">
+          <div class="message-info">
+            Resmoked 2 times | Proximity: Close
+          </div>
+          <p class="sender-name quiet">SecondNode</p>
+          <p class="content">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
       </div>
-    </div>
-  </section>
-  <aside>
-    <p class="box">
-      Own node name
-    </p>
-    <p class="box">
-      Most active nodes
-    </p>
-    <p class="box">
-      Closest nodes
-    </p>
-  </aside>
-  <footer>
-    Footer goes here
-  </footer>
+    </section>
+    <aside class="span-6 last">
+      <p class="box">
+        Own node name
+      </p>
+      <p class="box">
+        Most active nodes
+      </p>
+      <p class="box">
+        Closest nodes
+      </p>
+      <p><a href="#">About Us</a></p>
+      <p><a href="#">Help</a></p>
+    </aside>
+    <footer class="quiet span-24 last">
+      <hr />
+      No parrots have been harmed in the production of this prototype.
+    </footer>
+  </div>
 </body>
 </html>
