<input> does not use an end tag.

--- a/demo/index.html
+++ b/demo/index.html
@@ -25,7 +25,7 @@
       <div id="feed">
         <h2>Recently Smoked</h2>
         <div id="filter">
-          <input id="filter-text" type="search" class="text" placeholder="Insert your filter query here"></input>
+          <input id="filter-text" type="search" class="text" placeholder="Insert your filter query here">
           <button id="filter-button">Filter</button>
         </div>
         <hr class="space" />
