Corrected more validation errors

--- a/demo/index.html
+++ b/demo/index.html
@@ -73,7 +73,7 @@
       <div id="poster">
         <form>
           <textarea id="post-text" placeholder="Insert your post here"></textarea>
-          <button id="post-button" disabled="true">Post</button>
+          <button id="post-button" disabled="disabled">Post</button>
         </form>
       </div>
       <div id="feed">
