Split up the cgi-script some more, cleaned up the html and fixed validation errors.

--- a/tests/prototype/shell-script/smokeparrot/html/meta.html
+++ b/tests/prototype/shell-script/smokeparrot/html/meta.html
@@ -1,7 +1,8 @@
-<meta charset="utf-8">
-    <title>Smokeparrot</title>
-    <base href="/">
-    <link rel="stylesheet" href="/css/blueprint/screen.css">
-    <!--[if lt IE 8]><link rel="stylesheet" href="blueprint/ie" /><![endif]-->
-    <link rel="stylesheet" href="/css/custom.css">
-  <script type="text/javascript" src="js/jquery-1.6.min.js"></script>
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+<title>Smokeparrot</title>
+<base href="/">
+<link rel="stylesheet" href="/css/blueprint/screen.css">
+<!--[if lt IE 8]><link rel="stylesheet" href="blueprint/ie" /><![endif]-->
+<link rel="stylesheet" href="/css/custom.css">
+<script type="text/javascript" src="js/jquery-1.6.min.js"></script>
+
