--- a/tests/prototype/shell-script/smokeparrot/html/filter.html
+++ b/tests/prototype/shell-script/smokeparrot/html/filter.html
@@ -1,3 +1,4 @@
+<%# A filter to search messages. Currently functionality is implemented with jQuery in ./script.js %>
 <div id="filter">
 <input id="filter-text" type="text" class="text" placeholder="Insert your filter query here">
 <button id="filter-button">Filter</button>
