--- a/tests/prototype/shell-script/smokeparrot/html/post-form.html
+++ b/tests/prototype/shell-script/smokeparrot/html/post-form.html
@@ -2,6 +2,7 @@
 <form action="/cgi-bin/smokeparrot.cgi" method=POST>
 <div id="post-form">
 <textarea name="message_body" id="post-text" placeholder="Insert your post here"></textarea>
+<%# The post button is disabled while the textare is empty. %>
 <button type=submit id="post-button" disabled="disabled">Post</button>
 </div><!-- #post-form -->
 </form>
